tests/negative/call_less_args_2.fc
// test: call-non-void-with-no-arguments-test
// compile-fail: true
// exit-code: 1

int write(int _);
void exit(int _);

int foo(int a, int b){
    return a * b;
}

void main(){
    int res = foo();
    write(res);
    exit(0);
}